--- a/MyApp/WebApp.csproj
+++ b/MyApp/WebApp.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\RepositoryLayer\DataAccess.csproj" />
+    <ProjectReference Include="..\ServicesLayer\BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
