--- a/MyApp/appsettings.json
+++ b/MyApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server =(localdb)\\mssqllocaldb; DataBase = MyApp; Trusted_Connection = True; "
+  }
 }
