--- a/MyApp/appsettings.json
+++ b/MyApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server =(localdb)\\mssqllocaldb; DataBase = MyApp; Trusted_Connection = True; "
+    "DefaultConnection": "Server=DESKTOP-840S2G6\\SQLEXPRESS;Database=MyApp;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
